--- a/flip-the-coin-master/index.html
+++ b/flip-the-coin-master/index.html
@@ -98,7 +98,10 @@ color: #ECEDF0;
   
 
 <div class="images">
-<img src="resources/heads.svg" alt="">
+<div id="moneda">
+  <img src="resources/heads.svg" alt="">
+<img src="resources/tails.svg" alt="">
+</div>
 <img src="resources/shadow.svg" alt="">
 </div>
 
